# self-hosted

./: .env.example  .env.template  .gitignore  .gitmodules  .lintstagedrc.yml  .load-env  .prettierignore  .server.env.example  .terraform-version  AGENTS.md  INIT.md  Makefile  NETWORKING.md  README.md  SECRETS.md  TODO.md  conftest.py  docker-compose.base.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  node.yml  python.yml  secrets.yml
.husky/: pre-commit
config/adblock/: README.md  docker-compose.adguard.yml
config/analytics/: README.md
config/apprise/: README.md
config/backup/: README.md  docker-compose.restic.yml
config/bitwarden/: README.md
config/blog/: README.md  config.json  docker-compose.ghost.yml
config/bookmarks/: README.md
config/cache/: docker-compose.redis.yml  restore.sh
config/certs/: README.md  config.yml  docker-compose.dnsrobocert.yml
config/cloud-backup/: README.md
config/comment/: README.md
config/comments/: README.md
config/database/: my.cnf  (+3 more)
config/database-backup/: README.md
config/database-management/: README.md
decisions/: database.md  git.md  photos.md  sso-integration.md  storage.md
fixtures/: .env  README.md
scripts/: check-git  deploy  get-cloudflare-ips  get-cloudflare-ips.js  render_all.py  render_all_test.py  restore  restore-all  restore-all.sh  wait-for
src/: README.md  get_cloudflare_ips.py  get_cloudflare_ips_mock.py  get_cloudflare_ips_test.py  log_invocation.py  requests_session.py  requests_session_test.py  set_logging_defaults.py
(+188 files in other folders)
