[tool.poetry]
name = "self-hosted"
version = "0.1.0"
description = ""
authors = ["Jane Jeon <git@janejeon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
fake-useragent = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.12.0"
pytest = "^7.2.1"
responses = "^0.24.0"
pyfakefs = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
