[project]
name = "self-hosted"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = '>=3.12'

dependencies = [
    "fake-useragent>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pyfakefs>=5.10.0",
    "pytest>=8.4.2",
    "responses>=0.25.8",
]
